[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
dotenvy = "0.15.7"
inquire = "0.6.2"
once_cell = "1.17.1"
reqwest = "0.11.17"
reqwest-middleware = "0.2.1"
serde_json = "1.0.96"
spacedust = "1.0.5"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
] }
strum = { version = "0.24.1", features = ["derive"] }
task-local-extensions = "0.1.4"
tokio = { version = "1.28.0", features = ["full"] }
